  (:exc:`exceptions.HDF5ExtError`) is raised.
  Also, in case of open failures, invalid file descriptors are no more cached.
  Before is fix it was not possible to completely close the bad file and reopen
  the same path, even if a valid file was created in the meanwhile.
  Thanks to Daniele for reporting and for the useful test code.


Deprecations
------------

- The :data:`parameters.MAX_THREADS` configuration parameter is now
  deprecated.  Please use :data:`parameters.MAX_BLOSC_THREADS` and
  :data:`parameters.MAX_NUMEXPR_THREADS` instead.
  See :issue:`142`.

- Since the support for HDF5 1.6.x has been dropped, the *warn16incompat*
  argument of the :meth:`File.createExternalLink` method and the
  :exc:`exceptions.Incompat16Warning` exception class are now deprecated.

.. _numpy: http://numpy.scipy.org
.. _Blosc: https://github.com/FrancescAlted/blosc
.. _Numexpr: http://code.google.com/p/numexpr
.. _pyflakes: https://launchpad.net/pyflakes
.. _Cython: http://www.cython.org


Changes from 2.3 to 2.3.1
=========================

- Fixed a bug that prevented to read scalar datasets of UnImplemented types
  (closes :issue:`111`). Thanks to Kamil Kisiel.

- Fixed a bug in `setup.py` that caused installation of PyTables 2.3 to fail
  on hosts with multiple python versions installed (closes :issue:`113`).
  Thanks to sbinet.


Changes from 2.2.1 to 2.3
=========================

Features coming from (now liberated) PyTables Pro
-------------------------------------------------

- OPSI is a powerful and innovative indexing engine allowing PyTables to
  perform fast queries on arbitrarily large tables. Moreover, it offers a wide
  range of optimization levels for its indexes so that the user can choose the
  best one that suits her needs (more or less size, more or less performance).
  Indexation code also takes advantage of the vectorization capabilities of
  the NumPy and Numexpr packages to ensure really short indexing and search
  times.
